<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_home"
        android:title="@string/action_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_browser"
        android:title="@string/action_open_browser"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rate"
        android:title="@string/action_rate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>
